src/test/scala/wacc/wacc_examples/invalid/semanticErr/annotations/tailrec/tailrecOnProgram.wacc
# tailrec on program

# Output:
# #semantic_error#

# Exit:
# 200

# Program:
@tailrec # this is not a recursive function so this is semenatically invalid
begin
    int sumToFive(int x) is
        while (x != 5)
        do 
            x = x + 1 ;
            println x
        done ;
        return x
    end
    int x = call sumToFive(0) ;
    exit x    
end